fixed minor console errors on all components and updated styling and flex wrap of items in UserProfile

--- a/InsideIntervals.ui/src/components/shared/ChordPredictor/ChordPredictor.scss
+++ b/InsideIntervals.ui/src/components/shared/ChordPredictor/ChordPredictor.scss
@@ -20,3 +20,7 @@
   #chordRadioBox {
     width: 90%;
   }
+
+  #predictedChordsContainer, #relevantSongs {
+    margin-top: 3rem;
+  }
